# chb-recap-db

./: AXEL_ARIGATO_YTD'25.xlsx  Elemis -Nov.xlsx  FARM RIO - NOV ECOM.xlsx  GhawaliAE - NOV.csv  GhawaliSA - NOV.csv  REBUILD_PROMPT.md  Tumi - Nov 25 Ecom.xlsx  Yeda - NOV.csv  data.csv  index.html  kpi_dashboard.html  lACOSTE NOV'25.xlsx  muse_dashboard.html  muse_data.csv  sample_data.csv
.github/workflows/: deploy.yml
backend/: comparison_test.py  pyproject.toml
backend/config/: global_config.yaml
backend/config/brands/: axel_arigato.yaml  elemis.yaml  farm_rio.yaml  ghawali.yaml  jacquemus.yaml  lacoste.yaml  tumi.yaml  yeda.yaml
backend/ecomm_processor/: __init__.py  cli.py
backend/ecomm_processor/api/: __init__.py  main.py
backend/ecomm_processor/core/: __init__.py  config_loader.py  config_models.py  pipeline_engine.py  processing_context.py
backend/ecomm_processor/io/: __init__.py  brand_detector.py  file_reader.py  file_writer.py
backend/ecomm_processor/steps/: __init__.py  aggregate_step.py  base_step.py  filter_step.py  transform_step.py  validate_step.py
backend/ecomm_processor/transformers/: __init__.py  base_transformer.py  implementations.py  transformer_factory.py
backend/tests/: __init__.py  test_pipeline.py
docs/: BACKEND_ARCHITECTURE_PROPOSAL.md  SCRIPT_ANALYSIS.md  UI_TOOL_SPECIFICATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
scripts/: ecomm_processor.py
(+16 files in other folders)
